pothole-poet/streamlit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pothole-laureate
  namespace: laureate
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
spec:
  type: ClusterIP
  selector:
    app: pothole-laureate
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
